--- a/report/RJ/figs/tabelaoRJ.tex
+++ b/report/RJ/figs/tabelaoRJ.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Tue Oct  4 11:51:38 2016
+% Tue Oct 11 13:17:57 2016
 \begin{longtable}{l|lllllll}
   \hline
 Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\ 
@@ -9,97 +9,97 @@ Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\
 {\footnotesize Continua na próxima página}
 \endfoot
 \endlastfoot
-Angra dos Reis & Litoral Sul &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Aperibé & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Araruama & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Areal & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Armação dos Búzios & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Arraial do Cabo & Baixada Litorânea & 20.1 & 1 & 0 & 0.0 & 0.0 & verde \\ 
-  Barra do Piraí & Médio Paraíba &  & 0 & 31 & 63.2 & 1.2 & verde \\ 
-  Barra Mansa & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Belford Roxo & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jardim & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jesus do Itabapoana & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cabo Frio & Baixada Litorânea & 20.1 & 2 & 0 & 0.0 & 0.0 & verde \\ 
-  Cachoeiras de Macacu & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cambuci & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Campos dos Goytacazes & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cantagalo & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Carapebus & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cardoso Moreira & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Carmo & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Casimiro de Abreu & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Comendador Levy Gasparian & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Conceição de Macabu & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cordeiro & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Duas Barras & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Duque de Caxias & Metropolitana I & 17.9 & 0 & 1 & 0.1 & 0.8 & verde \\ 
-  Engenheiro Paulo de Frontin & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Guapimirim & Serrana & 19.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Iguaba Grande & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Itaboraí & Metropolitana II & 19.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Itaguaí & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Italva & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Itaocara & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Itaperuna & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+Angra dos Reis & Litoral Sul &  & 1 & 0 & 0.0 & 0.0 & verde \\ 
+  Aperibé & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Araruama & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Areal & Centro Sul & 18.1 & 0 & 1 & 8.4 & 0.2 & verde \\ 
+  Armação dos Búzios & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Arraial do Cabo & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Barra do Piraí & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Barra Mansa & Médio Paraíba &  & 0 & 1 & 0.6 & 12.1 & verde \\ 
+  Belford Roxo & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jardim & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jesus do Itabapoana & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cabo Frio & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cachoeiras de Macacu & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cambuci & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Campos dos Goytacazes & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cantagalo & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Carapebus & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cardoso Moreira & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Carmo & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Casimiro de Abreu & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Comendador Levy Gasparian & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Conceição de Macabu & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Cordeiro & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Duas Barras & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Duque de Caxias & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Engenheiro Paulo de Frontin & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Guapimirim & Serrana & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Iguaba Grande & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Itaboraí & Metropolitana II & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Itaguaí & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Italva & Noroeste &  & 0 & 1 & 6.9 & 1.2 & verde \\ 
+  Itaocara & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Itaperuna & Noroeste &  & 0 & 3 & 4.1 & 12.1 & verde \\ 
   Itatiaia & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Japeri & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Laje do Muriaé & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Macaé & Norte & 21.3 & 0 & 1 & 0.4 & 0.3 & verde \\ 
-  Macuco & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Magé & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Japeri & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Laje do Muriaé & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Macaé & Norte &  & 1 & 6 & 6.1 & 2.7 & verde \\ 
+  Macuco & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Magé & Metropolitana I & 18.1 & 0 & 1 & 0.4 & 7.1 & verde \\ 
   Mangaratiba & Litoral Sul &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Maricá & Metropolitana II & 19.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Mendes & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Mesquita & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Miguel Pereira & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Miracema & Noroeste & 21.3 & 0 & 2 & 11.2 & 12.1 & verde \\ 
-  Natividade & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Nilópolis & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Niterói & Metropolitana II & 19.3 & 1 & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Friburgo & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Iguaçu & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Paracambi & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Paraíba do Sul & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Maricá & Metropolitana II & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Mendes & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Mesquita & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Miguel Pereira & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Miracema & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Natividade & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Nilópolis & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Niterói & Metropolitana II & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Friburgo & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Iguaçu & Metropolitana I & 18.1 & 1 & 0 & 0.0 & 0.0 & verde \\ 
+  Paracambi & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Paraíba do Sul & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Paraty & Litoral Sul &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Paty do Alferes & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Petrópolis & Serrana & 17.9 & 2 & 0 & 0.0 & 0.0 & verde \\ 
+  Paty do Alferes & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Petrópolis & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Pinheiral & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Piraí & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Porciúncula & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Porciúncula & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Porto Real & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Quatis & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Queimados & Metropolitana I & 17.9 & 0 & 1 & 0.7 & 12.1 & verde \\ 
-  Quissamã & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Queimados & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Quissamã & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Resende & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Bonito & Metropolitana II & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Bonito & Metropolitana II & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Rio Claro & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Rio das Flores & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Rio das Ostras & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Rio de Janeiro & Metropolitana I & 17.9 & 16 & 13 & 0.5 & 0.5 & verde \\ 
-  Santa Maria Madalena & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Santo Antônio de Pádua & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São Fidélis & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São Francisco de Itabapoana & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São Gonçalo & Metropolitana II & 19.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São João da Barra & Norte & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São João de Meriti & Metropolitana I & 19.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São José de Ubá & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São José do Vale do Rio Preto & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São Pedro da Aldeia & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  São Sebastião do Alto & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Sapucaia & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Saquarema & Baixada Litorânea & 20.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Seropédica & Metropolitana I & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Silva Jardim & Metropolitana II & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Sumidouro & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Tanguá & Metropolitana II & 19.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Teresópolis & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Trajano de Moraes & Serrana & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Três Rios & Centro Sul & 17.9 & 1 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio das Ostras & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Rio de Janeiro & Metropolitana I & 18.1 & 2 & 10 & 0.4 & 0.4 & verde \\ 
+  Santa Maria Madalena & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Santo Antônio de Pádua & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São Fidélis & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São Francisco de Itabapoana & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São Gonçalo & Metropolitana II & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São João da Barra & Norte &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São João de Meriti & Metropolitana I & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São José de Ubá & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São José do Vale do Rio Preto & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São Pedro da Aldeia & Baixada Litorânea &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  São Sebastião do Alto & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Sapucaia & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Saquarema & Baixada Litorânea &  & 0 & 3 & 3.7 & 0.9 & verde \\ 
+  Seropédica & Metropolitana I & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Silva Jardim & Metropolitana II & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Sumidouro & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Tanguá & Metropolitana II & 19.6 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Teresópolis & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Trajano de Moraes & Serrana & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Três Rios & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
   Valença & Médio Paraíba &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Varre-Sai & Noroeste & 21.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Vassouras & Centro Sul & 17.9 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Volta Redonda & Médio Paraíba &  & 1 & 1 & 0.4 & 1.2 & verde \\ 
+  Varre-Sai & Noroeste &  & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Vassouras & Centro Sul & 18.1 & 0 & 0 & 0.0 & 0.0 & verde \\ 
+  Volta Redonda & Médio Paraíba &  & 0 & 1 & 0.4 & 1.1 & verde \\ 
   \hline
 \end{longtable}
