--- a/report/reportconfig/BoletimRio_InfoDengue.Rnw
+++ b/report/reportconfig/BoletimRio_InfoDengue.Rnw
@@ -14,7 +14,7 @@ library('xtable')
 @
   
 \fancyfoot[C]{Boletim Municipal - Rio de Janeiro}
-\fancyfoot[R]{SE \Sexpr{env$se} de \Sexpr{env$ano}}
+\fancyfoot[R]{SE \Sexpr{env$datarel} de \Sexpr{env$ano}}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \begin{document}
@@ -42,7 +42,7 @@ library('xtable')
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana \Sexpr{(env$datarel)} de \Sexpr{env$ano}} % se, ano, em pp.RData
+\textbf{Semana \Sexpr{(env$datarel)} de \Sexpr{env$ano}} % se, ano
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
