rotina alerta RJ

--- a/report/RJ/BoletimEstadual_RJ.tex
+++ b/report/RJ/BoletimEstadual_RJ.tex
@@ -19,7 +19,7 @@
 % Carregando dados  (atualmente é manual para cada estado)
 
 \fancyfoot[C]{Boletim Estadual - Rio de Janeiro}
-\fancyfoot[R]{Semana 41 de 2016}
+\fancyfoot[R]{Semana 42 de 2016}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \usepackage{Sweave}
@@ -47,7 +47,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 41 de 2016} % se, ano, em pp.RData
+\textbf{Semana 42 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -98,13 +98,13 @@
 %-------------------------------------------------------------------------------
 \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 106535 casos foram registrados no estado, sendo 61 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 107421 casos foram registrados no estado, sendo 75 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
 
-Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 41-2016. Para informações mais atualizadas
+Dos 92 municipios, 73 encontram-se em nivel verde, 19 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 42-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -143,7 +143,7 @@ As cores indicam niveis de atenção
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
 \textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Angra dos Reis 
-\gsquare Mangaratiba 
+\ysquare Mangaratiba 
 \gsquare Paraty 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{Nrst}{\heading{Regional Noroeste}{6pt}}
@@ -154,19 +154,19 @@ As cores indicam niveis de atenção
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Noroeste }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_Noroeste.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Aperibé 
-\gsquare Italva 
-\gsquare Itaperuna 
-\gsquare Laje do Muriaé 
-\gsquare Miracema 
-\gsquare Natividade 
-\gsquare Porciúncula 
-\gsquare Varre-Sai 
-\gsquare Santo Antônio de Pádua 
-\gsquare São José de Ubá 
-\gsquare Bom Jesus do Itabapoana 
-\gsquare Cambuci 
-\gsquare Cardoso Moreira 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Aperibé 
+\ysquare Italva 
+\ysquare Itaperuna 
+\ysquare Laje do Muriaé 
+\ysquare Miracema 
+\ysquare Natividade 
+\ysquare Porciúncula 
+\ysquare Varre-Sai 
+\ysquare Santo Antônio de Pádua 
+\ysquare São José de Ubá 
+\ysquare Bom Jesus do Itabapoana 
+\ysquare Cambuci 
+\ysquare Cardoso Moreira 
 \gsquare Itaocara 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{BxdL}{\heading{Regional Baixada Litorânea}{6pt}}
@@ -265,11 +265,11 @@ As cores indicam niveis de atenção
 \textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Carapebus 
 \gsquare Conceição de Macabu 
 \gsquare Macaé 
-\gsquare Quissamã 
-\gsquare São Francisco de Itabapoana 
-\gsquare São Fidélis 
-\gsquare São João da Barra 
-\gsquare Campos dos Goytacazes 
+\ysquare Quissamã 
+\ysquare São Francisco de Itabapoana 
+\ysquare São Fidélis 
+\ysquare São João da Barra 
+\ysquare Campos dos Goytacazes 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{CntS}{\heading{Regional Centro Sul}{6pt}}
 \includegraphics[width=0.8\textwidth]{figs/MapaRJ_CentroSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Centro Sul }\begin{center}
@@ -313,7 +313,7 @@ As cores indicam niveis de atenção
  %\begin{minipage}[t]{1\linewidth} % Mini page taking up 100% of the actual page
 
  
-      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Rio de Janeiro, na semana 41 de 2016}{6pt}}
+      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Rio de Janeiro, na semana 42 de 2016}{6pt}}
 
 
      \begin{center}
