--- a/report/RJ/figs/tabelaoRJ.tex
+++ b/report/RJ/figs/tabelaoRJ.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Tue Oct 18 10:05:43 2016
+% Tue Oct 25 11:49:57 2016
 \begin{longtable}{l|lllllll}
   \hline
 Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\ 
@@ -9,97 +9,97 @@ Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\
 {\footnotesize Continua na próxima página}
 \endfoot
 \endlastfoot
-Angra dos Reis & Litoral Sul & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Aperibé & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Araruama & Baixada Litorânea & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Areal & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Armação dos Búzios & Baixada Litorânea & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Arraial do Cabo & Baixada Litorânea & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Barra do Piraí & Médio Paraíba & 18.3 &  & 35 & 72.5 & 1.6 & verde \\ 
-  Barra Mansa & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Belford Roxo & Metropolitana I & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jardim & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jesus do Itabapoana & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cabo Frio & Baixada Litorânea & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cachoeiras de Macacu & Serrana & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cambuci & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campos dos Goytacazes & Norte &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cantagalo & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Carapebus & Norte & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cardoso Moreira & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Carmo & Serrana & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Casimiro de Abreu & Baixada Litorânea & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Comendador Levy Gasparian & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Conceição de Macabu & Norte & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cordeiro & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Duas Barras & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Duque de Caxias & Metropolitana I & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Engenheiro Paulo de Frontin & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Guapimirim & Serrana & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Iguaba Grande & Baixada Litorânea & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaboraí & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaguaí & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Italva & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaocara & Noroeste & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaperuna & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itatiaia & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Japeri & Metropolitana I & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Laje do Muriaé & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Macaé & Norte & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Macuco & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Magé & Metropolitana I & 20.9 &  & 2 & 1.7 & 7.0 & verde \\ 
-  Mangaratiba & Litoral Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Maricá & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mendes & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mesquita & Metropolitana I & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Miguel Pereira & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Miracema & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Natividade & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nilópolis & Metropolitana I & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Niterói & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Friburgo & Serrana & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Iguaçu & Metropolitana I & 19.3 &  & 1 & 0.1 & 2.3 & verde \\ 
-  Paracambi & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paraíba do Sul & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paraty & Litoral Sul & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paty do Alferes & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Petrópolis & Serrana & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pinheiral & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Piraí & Médio Paraíba & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porciúncula & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porto Real & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quatis & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Queimados & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quissamã & Norte &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Resende & Médio Paraíba & 18.3 &  & 1 & 0.8 & 0.8 & verde \\ 
-  Rio Bonito & Metropolitana II & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Claro & Médio Paraíba & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio das Flores & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio das Ostras & Baixada Litorânea & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio de Janeiro & Metropolitana I & 22.0 &  & 8 & 0.3 & 0.5 & verde \\ 
-  Santa Maria Madalena & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Santo Antônio de Pádua & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Fidélis & Norte &  &  & 1 & 2.7 & 11.7 & verde \\ 
-  São Francisco de Itabapoana & Norte &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Gonçalo & Metropolitana II & 21.3 &  & 9 & 2.1 & 4.1 & verde \\ 
-  São João da Barra & Norte &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  São João de Meriti & Metropolitana I & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São José de Ubá & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  São José do Vale do Rio Preto & Serrana & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Pedro da Aldeia & Baixada Litorânea & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Sebastião do Alto & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sapucaia & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Saquarema & Baixada Litorânea & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Seropédica & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Silva Jardim & Metropolitana II & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sumidouro & Serrana & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Tanguá & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Teresópolis & Serrana & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Trajano de Moraes & Serrana & 20.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Três Rios & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Valença & Médio Paraíba & 18.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Varre-Sai & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Vassouras & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Volta Redonda & Médio Paraíba & 18.3 &  & 4 & 2.3 & 4.3 & verde \\ 
+Angra dos Reis & Litoral Sul & 21.0 &  & 3 & 1.6 & 2.7 & verde \\ 
+  Aperibé & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Araruama & Baixada Litorânea & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Areal & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Armação dos Búzios & Baixada Litorânea & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Arraial do Cabo & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Barra do Piraí & Médio Paraíba & 21.0 &  & 24 & 48.7 & 1.0 & verde \\ 
+  Barra Mansa & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Belford Roxo & Metropolitana I & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jardim & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jesus do Itabapoana & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Cabo Frio & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cachoeiras de Macacu & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cambuci & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Campos dos Goytacazes & Norte & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Cantagalo & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Carapebus & Norte & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cardoso Moreira & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Carmo & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Casimiro de Abreu & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Comendador Levy Gasparian & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Conceição de Macabu & Norte & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cordeiro & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Duas Barras & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Duque de Caxias & Metropolitana I & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Engenheiro Paulo de Frontin & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Guapimirim & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Iguaba Grande & Baixada Litorânea & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaboraí & Metropolitana II & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaguaí & Metropolitana I & 23.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Italva & Noroeste & 24.3 &  & 2 & 20.7 & 3.5 & amarelo \\ 
+  Itaocara & Noroeste & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaperuna & Noroeste & 24.3 &  & 9 & 16.2 & 5.3 & amarelo \\ 
+  Itatiaia & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Japeri & Metropolitana I & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Laje do Muriaé & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Macaé & Norte & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Macuco & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Magé & Metropolitana I & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mangaratiba & Litoral Sul & 23.0 &  & 1 & 2.5 & 12.1 & amarelo \\ 
+  Maricá & Metropolitana II & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mendes & Centro Sul & 23.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mesquita & Metropolitana I & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Miguel Pereira & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Miracema & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Natividade & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Nilópolis & Metropolitana I & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Niterói & Metropolitana II & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Friburgo & Serrana & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Iguaçu & Metropolitana I & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paracambi & Centro Sul & 23.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paraíba do Sul & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paraty & Litoral Sul & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paty do Alferes & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Petrópolis & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Pinheiral & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Piraí & Médio Paraíba & 23.0 &  & 1 & 3.6 & 1.9 & verde \\ 
+  Porciúncula & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Porto Real & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quatis & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Queimados & Metropolitana I & 23.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quissamã & Norte & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Resende & Médio Paraíba & 21.0 &  & 3 & 3.2 & 2.1 & verde \\ 
+  Rio Bonito & Metropolitana II & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Claro & Médio Paraíba & 23.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio das Flores & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio das Ostras & Baixada Litorânea & 23.1 &  & 1 & 0.8 & 1.2 & verde \\ 
+  Rio de Janeiro & Metropolitana I & 23.3 &  & 21 & 0.9 & 1.4 & verde \\ 
+  Santa Maria Madalena & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Santo Antônio de Pádua & Noroeste & 24.3 &  & 1 & 2.4 & 12.1 & amarelo \\ 
+  São Fidélis & Norte & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  São Francisco de Itabapoana & Norte & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  São Gonçalo & Metropolitana II & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São João da Barra & Norte & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  São João de Meriti & Metropolitana I & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São José de Ubá & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  São José do Vale do Rio Preto & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Pedro da Aldeia & Baixada Litorânea & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Sebastião do Alto & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Sapucaia & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Saquarema & Baixada Litorânea & 22.7 &  & 8 & 12.4 & 1.2 & verde \\ 
+  Seropédica & Metropolitana I & 23.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Silva Jardim & Metropolitana II & 22.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Sumidouro & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Tanguá & Metropolitana II & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Teresópolis & Serrana & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Trajano de Moraes & Serrana & 23.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Três Rios & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Valença & Médio Paraíba & 21.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Varre-Sai & Noroeste & 24.3 &  & 0 & 0.0 & 0.0 & amarelo \\ 
+  Vassouras & Centro Sul & 23.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Volta Redonda & Médio Paraíba & 21.0 &  & 1 & 0.4 & 0.4 & verde \\ 
   \hline
 \end{longtable}
